--- a/project/popup/popup.html
+++ b/project/popup/popup.html
@@ -55,7 +55,6 @@
             <input type="checkbox" class="testF" id="classes-s4" value="0">课表功能增强</input>
             <input type="checkbox" class="testF" id="classes-s5" value="0">计算加权</input>
             <input type="checkbox" class="testF" id="classes-s6" value="0">点击小心心</input>
-            <input type="checkbox" class="testF" id="classes-s7" value="0" disabled="true">过验证码(不可用)</input>
         </div>
         <div>
             <a id="link_scloolMap" href="http://map.tju.edu.cn/index.shtml">校园地图</a>
@@ -82,6 +81,10 @@
         <div>
             <a id="link_mooc" href="https://www.icourse163.org/">MOOC</a>
             <input type="checkbox" class="testF" id="mooc-s1" value="0">视频跳答题</input>
+        </div>
+        <div>
+            <a id="link_sso" href="https://sso.tju.edu.cn/cas/login">验证</a>
+            <input type="checkbox" class="testF" id="sso-s1" value="0">自动填写</input>
         </div>
     </div>
 
