--- a/project/popup/popup.html
+++ b/project/popup/popup.html
@@ -56,6 +56,7 @@
             <input type="checkbox" class="testF" id="classes-s5" value="0">计算加权</input>
             <input type="checkbox" class="testF" id="classes-s6" value="0">点击小心心</input>
             <input type="checkbox" class="testF" id="classes-s7" value="0">实验选课功能增强</input>
+            <input type="checkbox" class="testF" id="classes-s8" value="0">子网页功能增强</input>
         </div>
         <div>
             <a id="link_scloolMap" href="http://map.tju.edu.cn/index.shtml">校园地图</a>
@@ -71,7 +72,7 @@
             <input type="checkbox" class="testF" id="twt-s1" value="0" disabled="true">自动答题(不可用)</input>
         </div>
         <div>
-            <a id="link_geogeba" href="https://www.geogebra.org/calculator">GroGebra</a>
+            <a id="link_geogeba" href="https://www.geogebra.org/calculator">GeoGebra</a>
         </div>
         <div>
             <a id="link_cet" href="https://cet.neea.edu.cn">CET</a>
