--- a/project/popup/popup.html
+++ b/project/popup/popup.html
@@ -107,6 +107,10 @@
             <a id="link_pigai" href="http://www.pigai.org/index.php">批改网</a>
             <input type="checkbox" class="testF" id="pigai-s1" value="0">作文可粘贴</input>
         </div>
+        <div>
+            <a id="link_net" href="http://202.113.15.50:8800/?">校园网</a>
+            <a id="link_netVer" href="http://202.113.5.130/srun_portal_pc?ac_id=11&theme=tju">校园网验证</a>
+        </div>
     </div>
 
     <div class="foot">
