--- a/project/验证.html
+++ b/project/验证.html
@@ -8,7 +8,7 @@
     <script src='https://cdn.jsdelivr.net/npm/tesseract.js@4/dist/tesseract.min.js'></script>
     <title>Document</title>
 </head>
-<img src="http://47.95.112.111:8888/proxy?q=https://sso.tju.edu.cn/cas/images/kaptcha.jpg" alt="">
+<img src="https://sso.tju.edu.cn/cas/code" alt="">
 <div>
     <canvas id="canvas1"></canvas>
     <canvas id="canvas2"></canvas>
