--- a/project/popup/popup.html
+++ b/project/popup/popup.html
@@ -60,6 +60,7 @@
             <input type="checkbox" class="testF" id="classes-s7" value="0">实验选课功能增强</input>
             <input type="checkbox" class="testF" id="classes-s8" value="0">子网页功能增强</input>
             <input type="checkbox" class="testF" id="classes-s9" value="0">开课课表查看</input>
+
         </div>
         <div>
             <a id="link_scloolMap" href="http://map.tju.edu.cn/index.shtml">校园地图</a>
@@ -101,7 +102,8 @@
                 <option value="6">蔡徐坤</option>
                 <option value="7">丁真</option>
             </select>
-            <input type="checkbox" class="testF" id="sso-s3" value="0" disabled="true">永久登录(不可用)</input>
+            <input type="checkbox" class="testF" id="sso-s3" value="0">自动填验证码</input>
+            <input type="checkbox" class="testF" id="sso-s4" value="0">不是弱密码</input>
         </div>
         <div>
             <a id="link_pigai" href="http://www.pigai.org/index.php">批改网</a>
@@ -110,6 +112,11 @@
         <div>
             <a id="link_net" href="http://202.113.15.50:8800/?">校园网</a>
             <a id="link_netVer" href="http://202.113.5.130/srun_portal_pc?ac_id=11&theme=tju">校园网验证</a>
+        </div>
+        <div>
+            <a id="link_thesis" href="http://121.193.132.43/thesis/">毕业论文</a>
+            <input type="checkbox" class="testF" id="thesis-s1" value="0">我真的已阅读</input>
+            <input type="checkbox" class="testF" id="thesis-s2" value="0">自动登录</input>
         </div>
     </div>
 
